--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,13 @@
+logging.level.org.springframework.web.socket=DEBUG
+logging.level.org.springframework.security=DEBUG
+
+socket.host=localhost
+socket.port=8081
+
 spring.application.name=dolphinadminbackend
 spring.datasource.url=jdbc:mariadb://localhost:3306/dolphin_admin_backend
 spring.datasource.username=root
 spring.datasource.password=admin
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
+
