--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,9 +5,19 @@ socket.host=localhost
 socket.port=8081
 
 spring.application.name=dolphinadminbackend
-spring.datasource.url=jdbc:mariadb://localhost:3306/dolphin_admin_backend
-spring.datasource.username=root
-spring.datasource.password=admin
+# spring.datasource.url=jdbc:mariadb://localhost:3306/dolphin_admin_backend
+# spring.datasource.username=root
+# spring.datasource.password=admin
+
+# spring.datasource.url=jdbc:mariadb://323-y.h.filess.io:3305/dolphin_examinehis
+# spring.datasource.username=dolphin_examinehis
+# spring.datasource.password=07dec6de27bd323d6d2971594052e7785dad2a68
+
+spring.datasource.url=jdbc:mariadb://asia-southeast1-001.proxy.kinsta.app:30557/dolphin_admin_backend
+spring.datasource.username=reptile
+spring.datasource.password=zI2$jP4[tJ4*kE7:
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
+spring.datasource.hikari.maximum-pool-size=3
+
 
