--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,8 @@ services:
     # container_name: dolphinadminbackend
     ports:
       - "8080:8080"  # Spring Boot app
-      - "8081:8081"  # WebSocket
-    environment:
-      SOCKET_HOST: "0.0.0.0"
-      SOCKET_PORT: 8081
+      # - "8081:8081"  # WebSocket
+    # environment:
+    #   SOCKET_HOST: "0.0.0.0"
+    #   SOCKET_PORT: 8081
 
