removed socket and hardcoded jwt secret

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,4 +14,9 @@ spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.hikari.maximum-pool-size=3
 
+spring.datasource.url=jdbc:mariadb://asia-southeast1-001.proxy.kinsta.app:30557/dolphin_admin_backend
+spring.datasource.username=reptile
+spring.datasource.password=zI2$jP4[tJ4*kE7:
+
+jwt.secret=${JWT_SECRET}
 
