--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,10 +10,18 @@ server.port=8080
 # 2️⃣ Command Line Arguments
 # 3️⃣ application.properties (Lowest Priority)
 
-spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.hikari.maximum-pool-size=3
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.hikari.maximum-pool-size=5
 
-jwt.secret = ${JWT_SECRET}
+
+socket.host=${SOCKET_HOST}
+socket.port=${SOCKET_PORT}
+jwtsign.secret=${JWTSIGN_SECRET}
+allowed.origin=${ALLOWED_ORIGIN}
 
 
