added texttosql, and other changes

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,9 +13,10 @@ services:
       - SOCKET_HOST=0.0.0.0
       - SOCKET_PORT=8081
       - JWTSIGN_SECRET=${JWTSIGN_SECRET}
-      - ALLOWED_ORIGIN=http://localhost:5000
+      - ALLOWED_ORIGIN=${ALLOWED_ORIGIN}
       - SPRING_DATASOURCE_URL=${SPRING_DATASOURCE_URL}
       - SPRING_DATASOURCE_USERNAME=${SPRING_DATASOURCE_USERNAME}
       - SPRING_DATASOURCE_PASSWORD=${SPRING_DATASOURCE_PASSWORD}
+      - GEMINI_API_KEY=${GEMINI_API_KEY}
       # - MY_CUSTOM_ENV=${MY_CUSTOM_ENV}
 
