--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,7 +1,37 @@
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.hibernate.ddl-auto=create
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
-spring.jpa.show-sql=true
+logging.level.org.springframework.web.socket=DEBUG
+logging.level.org.springframework.security=DEBUG
+logging.level.root=INFO
+logging.level.com.dolphin.adminbackend=DEBUG
+
+
+spring.application.name=dolphinadminbackend
+server.port=8080
+
+# Spring Boot automatically picks up environment variables and overrides application.properties when running inside Docker or on a cloud provider like Render.
+# 1️⃣ Environment Variables (Highest Priority)
+# 2️⃣ Command Line Arguments
+# 3️⃣ application.properties (Lowest Priority)
+
+spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.hikari.maximum-pool-size=5
+
+socket.host=${SOCKET_HOST}
+socket.port=${SOCKET_PORT}
+
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+jwtsign.secret=${JWTSIGN_SECRET}
+allowed.origin=${ALLOWED_ORIGIN}
+gemini.api.key=${GEMINI_API_KEY}
+
+
+
+
+
+
+
+
+
