--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,16 +12,19 @@ server.port=8080
 
 spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=${SPRING_DATASOURCE_URL}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.hikari.maximum-pool-size=5
 
-
 socket.host=${SOCKET_HOST}
 socket.port=${SOCKET_PORT}
+
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 jwtsign.secret=${JWTSIGN_SECRET}
 allowed.origin=${ALLOWED_ORIGIN}
+gemini.api.key=${GEMINI_API_KEY}
+
+
 
 
