removed payment, added more sim features

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,5 +18,5 @@ services:
       - SPRING_DATASOURCE_USERNAME=${SPRING_DATASOURCE_USERNAME}
       - SPRING_DATASOURCE_PASSWORD=${SPRING_DATASOURCE_PASSWORD}
       - GEMINI_API_KEY=${GEMINI_API_KEY}
-      # - MY_CUSTOM_ENV=${MY_CUSTOM_ENV}
+      - TZ=Asia/Kuala_Lumpur
 
