--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,6 @@
 logging.level.org.springframework.web.socket=DEBUG
 logging.level.org.springframework.security=DEBUG
 
-
 spring.application.name=dolphinadminbackend
 server.port=8080
 
@@ -22,8 +21,10 @@ spring.datasource.url=${SPRING_DATASOURCE_URL}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 jwtsign.secret=${JWTSIGN_SECRET}
+iphasher.secret=${IPHASHER_SECRET}
 allowed.origin=${ALLOWED_ORIGIN}
 gemini.api.key=${GEMINI_API_KEY}
+
 
 
 
