missed this file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
       - SOCKET_HOST=0.0.0.0
       - SOCKET_PORT=8081
       - JWTSIGN_SECRET=${JWTSIGN_SECRET}
+      - IPHASHER_SECRET=${IPHASHER_SECRET}
       - ALLOWED_ORIGIN=${ALLOWED_ORIGIN}
       - SPRING_DATASOURCE_URL=${SPRING_DATASOURCE_URL}
       - SPRING_DATASOURCE_USERNAME=${SPRING_DATASOURCE_USERNAME}
