--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,9 +10,10 @@ server.port=8080
 # 2️⃣ Command Line Arguments
 # 3️⃣ application.properties (Lowest Priority)
 
-spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.hikari.maximum-pool-size=3
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.hikari.maximum-pool-size=5
 
 spring.datasource.url=${SPRING_DATASOURCE_URL}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
